.set.remove(S,b);              // S = {5,a,p(2)}
.set.to_list(S,L);             // L = [5,a,p(2)]
.set.union(S,[a,1]);           // S = {1,5,a,p(2)}
.length(S,X);                  // X = 4
.set.difference(S,[1,a]);      // S = {5,p(2)}
.findall(K, .member(K,S), LL)  // LL = [5,p(2)]
.set.add(V,5);
.set.intersection(S,V);        // S = {5}
.set.clear(S);                 // S = {}
----

== version 2.4 (2019-05-24)

(a built package is available at https://sourceforge.net/projects/jason/files/jason/version%202.4/[here])

- `.stopMAS` accepts an optional parameter with an amount of time before shutdown. Agents thus can prepare themselves reacting to the signal `+jag_shutting_down(T)`. E.g.
+
----
...  .stopMAS(2000); // shutdown the system in 2 seconds
...
+jag_shutting_down(T) <- .print("I have ",T/1000," seconds to pack my stuff").
----

- similarly, `.kill_agent` has an optional parameter to inform the amount of time before the agent will be killed.

- New performative `signal`. The semantics is that the receiver will have the event added in its event queue. For example, if Alice executes
+
----
.send(bob,signal,hello);
.send(bob,signal,hello);
----
+
it produces in Bob *two* events `+hello[source(alice)]`. Different than `tell`, no belief is added.

- New internal action to change verbosity:
    * `.verbose(2)`: start showing debug messages
    * `.verbose(1)`: goes back to normal message / logging level

- Improved support for meta-programming. See demos/meta-programming.

- event `+!jag_sleeping` was replaced by (a signal) `+jag_sleeping`
- event `+!jag_awaking`  was replaced by (a signal) `+jag_awaking`

== version 2.3 (2018-10-01)

(a built package is available at https://sourceforge.net/projects/jason/files/jason/version%202.3/[here])


- New internal actions to support Directory Facilitator services:
    * `.df_register(S)`: register the agent in the DF as a provider of service `S`