@@ -15,7 +15,7 @@ import jason.asSyntax.Term;
   <p>Description: converts the string S1 into lower case S2.
 
   <p>Parameters:<ul>
-  <li>+ S1 (a term). The term representation as a string will be used.<br/>
+  <li>+ S1 (a term). In this case, the term to string is used.<br/>
   <li>-/+ S2 (a string).<br/>
   </ul>
 
