@@ -101,6 +101,7 @@ Internal actions of Jason.
   <li>{@link jason.stdlib.term2string term2string}: convert terms to strings and vice-versa.</li>
   <li>{@link jason.stdlib.lower_case lower_case}: lower case strings.</li>
   <li>{@link jason.stdlib.upper_case upper_case}: upper case strings.</li>
+  <li>{@link jason.stdlib.replace replace}: replace strings.</li>
 </ul>
 
 <h2>Execution control</h2>
